--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,7 +191,7 @@
     //no internet
     <string name="no_internet">No internet connection!</string>
     <string name="please_connect">Please connect to the internet and try again</string>
-    <string name="get_started">H Get Started</string>
+    <string name="get_started">Get Started</string>
 
     <string name="your_score">Your Score</string>
     <string name="free_game_play">Free Gameplay</string>
@@ -281,6 +281,15 @@
     <string name="change_referral_code">Change referral code</string>
     <string name="min_max">Min ₹1  - Max ₹ %s</string>
     <string name="dashhome">-</string>
+
+
+    // Update
+    <string name="force_update_title">App Update Required</string>
+    <string name="optional_update_title">App Update Available</string>
+    <string name="optional_update_desc">We have done some bug fixes and performance improvements under the hood!</string>
+    <string name="force_update_desc">We have done some major performance upgrades under the hood! Please update the app to continue.</string>
+    <string name="update_now"> Update Now </string>
+    <string name="update_latter"> I’ll do it later </string>
 
     //Search
     <string name="search">Search</string>
